fixed horizontal scoll on mobile

--- a/styles/partials/_reuseableCode.scss
+++ b/styles/partials/_reuseableCode.scss
@@ -8,6 +8,9 @@ html {
     scroll-behavior: smooth;
     overflow-x: hidden;
 }
+body {
+    width: 100%;
+}
 
 body, h1, h2, h3, ul, p {
     margin: 0;
